--- a/land.html
+++ b/land.html
@@ -44,8 +44,7 @@
 			<h3>Welcome to the platform for our coding courses! Real-world projects, supportive community, and expertise instruction will help you reach your full potential. 
 				Begin learning to code now to create a better future."</h3>
 			<br><button> 
-				<a href= 
-"https://www.google.com/?&bih=704&biw=767&hl=en"> 
+				<a href="https://www.google.com/?&bih=704&biw=767&hl=en"> 
 					Explore More 
 				</a> 
 			</button> 
